--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
       </ion-grid>
     
       <div class="disclaimer">
-        This webiste is for demo puposes only and demostrates an app with limited functionality.<br />
+        This website is for demo puposes only and demostrates an app with limited functionality.<br />
         Copyright © 2018. All rights reserved
       </div>
 
